# webplayer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
assets/js/: siteapi.ts
import-album/: Cargo.toml
import-album/src/: main.rs
migrations/20170212044543_initial/: down.sql  up.sql
migrations/20170320221700/: down.sql  up.sql
ogg/: Cargo.toml  LICENSE  README.md
ogg/src/: crc.rs  lib.rs  reader.rs  vorbis.rs
schema/: initial.sql
src/: asset.rs  blah.txt  blob.rs  config.rs  main.rs  web.rs
src/auth/: google.rs  mod.rs
src/database/: mod.rs
src/database/drivers/: mock.rs  mod.rs  postgres.rs
src/foreign_auth/: google.rs  mod.rs
src/model/: album.rs  mod.rs  song.rs
src/rpc/: album.rs  blob.rs  hateoas.rs  login.rs  mod.rs  ograph.rs  song.rs
src/rpc/cursor/: mod.rs  song.rs
src/rpc/hateoas_def/: album.rs  mod.rs  song.rs
src/rpc/query/: mod.rs  song.rs
src/rpc/ser/: mod.rs  song_object.rs
src/util/: hex.rs  json.rs  mod.rs
src/webby/: mod.rs
template/login/: index.html
template/player/: index.html
