[package]
name = "import-album"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]

[dependencies]
postgres = { version = "*", features = [ "with-native-tls", "with-serde_json", "with-uuid" ] }
ogg = { path = "../ogg" }
rust-crypto = "^0.2"
serde = "*"
serde_json = "*"
serde_derive = "*"